force-app/main/default/objects/AudioProcessingJob__c/AudioProcessingJob__c.object-meta.xml
<CustomObject>
    <label>AudioProcessingJob</label>
    <nameField>
        <displayFormat>APJ-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AudioProcessingJobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>