force-app/main/default/objects/AudioProcessingJob__c/fields/TaskId__c.field-meta.xml
<CustomField>
    <fullName>TaskId__c</fullName>
    <label>TaskId</label>
    <length>24</length>
    <type>Text</type>
</CustomField>