force-app/main/default/objects/AudioProcessingJob__c/fields/Voice_Call__c.field-meta.xml
<CustomField>
    <fullName>Voice_Call__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Voice Call</label>
    <referenceTo>VoiceCall</referenceTo>
    <relationshipLabel>AudioProcessingJobs</relationshipLabel>
    <relationshipName>AudioProcessingJobs</relationshipName>
    <type>Lookup</type>
</CustomField>