force-app/main/default/objects/AudioProcessingJob__c/listViews/All_TODAY.listView-meta.xml
<ListView>
    <fullName>All_TODAY</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>TaskId__c</columns>
    <columns>Voice_Call__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>LastError__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>All TODAY</label>
    <sharedTo>
        <role>Executive</role>
    </sharedTo>
</ListView>